# OradiO

./: .gitignore  CMakeLists.txt  README.md  diagram.json  merge.bat  package-lock.json  partitions.csv  sdkconfig  sdkconfig.old  wokwi.toml
components/LCD44780/: CMakeLists.txt  lcd44780.cpp  lcd44780.h
components/OFileSystem/: CMakeLists.txt  ofileSystem.cpp  ofileSystem.h
components/OServer/: CMakeLists.txt  context.h  handlers.cpp  handlers.h  oserver.cpp  oserver.h
components/StreamReader/: CMakeLists.txt  streamReader.cpp  streamReader.h
components/Vs1053/: CMakeLists.txt  VS1053.h  vs1053.cpp  vs1053b-patches-pitch.h
components/Wifi/: CMakeLists.txt  wifi.cpp  wifi.h
main/: CMakeLists.txt  display.cpp  display.h  helper.h  idf_component.yml  main.cpp  main.h  oconfig.h
main/models/: bounds.h  displayCommand.h  displayMessage.cpp  displayMessage.h  displaySegment.cpp  displaySegment.h  jsonExtensions.h  playlist.h  scrollData.h  station.h  vs1503Command.h
main/models/settings/: displaySettings.h  oSettings.h  vs1053Settings.h  wifiSettings.h
www/: package-lock.json  package.json  tsconfig.json
www/public/: index.html  manifest.json  playlist.json  settings.json
www/src/: AlertComponent.tsx  App.tsx  Player.tsx  Settings.tsx  Stations.scss  Stations.tsx  api.service.ts  index.scss  index.tsx  models.ts
